Adding some generated files

--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -822,6 +822,13 @@
      </a>
     </li>
     <li>
+     <a class="dir-index-link" href="rogue/index.html">
+      <i class="fas fa-folder">
+      </i>
+      rogue
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="tiefling/index.html">
       <i class="fas fa-folder">
       </i>
