--- a/campaign/characters/non-player/rogue/index.html
+++ b/campaign/characters/non-player/rogue/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html>
  <head>
   <meta charset="utf-8"/>
   <title>
-   pine resin balm
+   index
   </title>
   <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
@@ -46,48 +45,17 @@
     Forward
    </a>
   </div>
-  <div class="dnd-header">
-   <h1>
-    <a href="../herbs/pine_resin.html">
-     pine resin
-    </a>
-    balm
-   </h1>
-  </div>
-  <hr/>
-  <div class="dnd-info">
-   <h3>
-    <a href="../herbs/pine_resin.html">
-     pine resin
-    </a>
-    Balm
-   </h3>
-   <p class="first-paragraph">
-    A thick, amber-colored salve in a small tin, made from pine sap and oils. Applying it to minor wounds stabilizes the user (as if succeeding on a death saving throw) if they’re at 0 hit points. Costs 2 gp per tin, single use.
-   </p>
-  </div>
-  <hr/>
-  <div class="dnd-list">
-   <h3>
-    Recipe
-   </h3>
-   <p>
-    <ul>
-     <li>
-      Melt 1 ounce of
-      <a href="../herbs/pine_resin.html">
-       pine resin
-      </a>
-      with 1 tablespoon of lard over low heat.
-     </li>
-     <li>
-      Stir in 1 teaspoon of crushed lavender until fully blended.
-     </li>
-     <li>
-      Pour into a tin and let harden for 4 hours before sealing.
-     </li>
-    </ul>
-   </p>
+  <h1>
+   Index of /media/awtorode/storage1/projects/git/DnD/campaign/characters/non-player/rogue
+  </h1>
+  <div class="indexLinks">
+   <ul>
+    <li>
+     <a href="Finnegan_(Finn)_Sharblade.html">
+      Finnegan (Finn) Sharblade
+     </a>
+    </li>
+   </ul>
   </div>
  </body>
 </html>
