--- a/campaign/items/consumables/potions/bitterroot_tonic.html
+++ b/campaign/items/consumables/potions/bitterroot_tonic.html
@@ -48,13 +48,19 @@
   </div>
   <div class="dnd-header">
    <h1>
-    bitterroot tonic
+    <a href="../herbs/bitterroot.html">
+     bitterroot
+    </a>
+    tonic
    </h1>
   </div>
   <hr/>
   <div class="dnd-info">
    <h3>
-    Bitterroot Tonic
+    <a href="../herbs/bitterroot.html">
+     bitterroot
+    </a>
+    Tonic
    </h3>
    <p class="first-paragraph">
     A murky brown liquid in a small vial, brewed from bitter roots and herbs. Drinking it grants a temporary boost to endurance, reducing exhaustion by one level for 1 hour (does not stack). Costs 5 gp per vial, but the taste is notoriously foul.
