--- a/campaign/items/consumables/potions/ember_pepper_draught.html
+++ b/campaign/items/consumables/potions/ember_pepper_draught.html
@@ -48,13 +48,19 @@
   </div>
   <div class="dnd-header">
    <h1>
-    ember pepper draught
+    <a href="../herbs/ember_pepper.html">
+     ember pepper
+    </a>
+    draught
    </h1>
   </div>
   <hr/>
   <div class="dnd-info">
    <h3>
-    Ember Pepper Draught
+    <a href="../herbs/ember_pepper.html">
+     ember pepper
+    </a>
+    Draught
    </h3>
    <p class="first-paragraph">
     A spicy, red-orange liquid in a clay bottle, distilled from fiery peppers. Drinking it warms the body, providing resistance to cold weather effects (not damage) for 2 hours. Costs 4 gp per bottle and leaves the drinker sweating profusely.
