Added some html files

--- a/campaign/creatures/critters/bristlecone_hopper.html
+++ b/campaign/creatures/critters/bristlecone_hopper.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="utf-8"/>
   <title>
-   index
+   bristlecone hopper
   </title>
   <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
@@ -45,17 +46,19 @@
     Forward
    </a>
   </div>
-  <h1>
-   Index of /home/awtorode/git/DnD/campaign/lore/history
-  </h1>
-  <div class="indexLinks">
-   <ul>
-    <li>
-     <a href="the_children_of_the_sun.html">
-      the children of the sun
-     </a>
-    </li>
-   </ul>
+  <div class="dnd-header">
+   <h1>
+    bristlecone hopper
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Bristlecone Hopper
+   </h3>
+   <p class="first-paragraph">
+    A rabbit-sized creature with legs like a grasshopper and a coat of stiff, pine-needle-like fur. It leaps up to 15 feet in a single bound to escape predators, rustling loudly as it goes. Its fur can prick unwary handlers (1 piercing damage on contact), but it’s otherwise docile and feeds on berries.
+   </p>
   </div>
  </body>
 </html>
