--- a/campaign/locations/cities/Tol'Kahtan.html
+++ b/campaign/locations/cities/Tol'Kahtan.html
@@ -61,10 +61,14 @@
     <a href="../regions/Matella/Eldara/Eldara.html">
      Eldara
     </a>
-    . It stood as a testament to the grandeur and resilience of a civilization known as the Children of the Sun, a people who revered their pharaoh as a divine ruler and a beacon of enlightenment.
+    . It stood as a testament to the grandeur and resilience of a civilization known as
+    <a href="../../lore/history/the_children_of_the_sun.html">
+     the children of the sun</a>, a people who revered their pharaoh as a divine ruler and a beacon of enlightenment.
    </p>
    <p>
-    The citizens of Tol'Kahtan, the Children of the Sun, held steadfast to their ancestral heritage, drawing strength from their celestial ties and the wisdom of their pharaoh, known as the Phoenix King. Theirs was a civilization built upon the principles of unity, enlightenment, and reverence for the cosmic forces that shaped their lives.
+    The citizens of Tol'Kahtan,
+    <a href="../../lore/history/the_children_of_the_sun.html">
+     the children of the sun</a>, held steadfast to their ancestral heritage, drawing strength from their celestial ties and the wisdom of their pharaoh, known as the Phoenix King. Theirs was a civilization built upon the principles of unity, enlightenment, and reverence for the cosmic forces that shaped their lives.
    </p>
    <p>
     At the heart of Tol'Kahtan rose
@@ -73,7 +77,9 @@
     <a href="../landmarks/Tol'Medith.html">
      Tol'Medith
     </a>
-    stood as a testament to the collective spirit of the Children of the Sun, a constant reminder of their shared identity and the eternal light that once guided their path.
+    stood as a testament to the collective spirit of
+    <a href="../../lore/history/the_children_of_the_sun.html">
+     the children of the sun</a>, a constant reminder of their shared identity and the eternal light that once guided their path.
    </p>
    <p>
     In its prime, Tol'Kahtan flourished as a center of knowledge, art, and communal harmony. The city's streets bustled with life as scholars delved into esoteric wisdom, craftsmen honed their skills to perfection, and the people reveled in the prosperity that their enlightened society bestowed upon them. Tol'Kahtan stood as a shining beacon of civilization, a testament to the heights that mortal endeavors could achieve.
@@ -93,7 +99,11 @@
     Tol'Kahtan succumbed to the ravages of time, fading into obscurity and becoming a mere echo of a bygone era. Its grand structures crumbled, its streets fell silent, and the once-thriving civilization was consigned to the annals of history. Today, Tol'Kahtan exists only in fragments of lore and myth, a ghostly remnant of a forgotten time. It remains a lost city, buried beneath layers of soil and forgotten memories, its exact location known only to a select few scholars and intrepid adventurers who seek the remnants of its glory.
    </p>
    <p>
-    In the hearts of those who hear tales of Tol'Kahtan, a yearning arises—a desire to rediscover the secrets of a lost civilization, to uncover the wisdom and power that once thrived within its walls. The legends of the Phoenix King and the Children of the Sun continue to captivate the imaginations of those who believe in the resilience of forgotten realms and the enduring legacy of ancient civilizations. Tol'Kahtan, the Lost City of the Phoenix King, remains a symbol of the fleeting nature of mortal endeavors and the indomitable spirit that survives even in the face of oblivion. Its name echoes through time, a reminder of a glorious past and the potential for rediscovery, should the tides of destiny ever bring forth those destined to seek its hidden treasures.
+    In the hearts of those who hear tales of Tol'Kahtan, a yearning arises—a desire to rediscover the secrets of a lost civilization, to uncover the wisdom and power that once thrived within its walls. The legends of the Phoenix King and
+    <a href="../../lore/history/the_children_of_the_sun.html">
+     the children of the sun
+    </a>
+    continue to captivate the imaginations of those who believe in the resilience of forgotten realms and the enduring legacy of ancient civilizations. Tol'Kahtan, the Lost City of the Phoenix King, remains a symbol of the fleeting nature of mortal endeavors and the indomitable spirit that survives even in the face of oblivion. Its name echoes through time, a reminder of a glorious past and the potential for rediscovery, should the tides of destiny ever bring forth those destined to seek its hidden treasures.
    </p>
   </div>
   <hr/>
@@ -131,7 +141,11 @@
     The Whispering Library
    </h4>
    <p class="subsection">
-    Deep within the heart of Tol'Kahtan lies a hidden chamber, known as the Whispering Library. This secluded haven is adorned with shelves upon shelves of ancient tomes and scrolls, their pages filled with the accumulated wisdom of the Children of the Sun. While the illusory spirits wander the city, they hold within them fragments of memories and forgotten lore. By engaging with these ethereal apparitions in the Whispering Library, adventurers can glean valuable insights, whispers of clues that may point them towards the hidden paths and mechanisms that unlock the entrance to
+    Deep within the heart of Tol'Kahtan lies a hidden chamber, known as the Whispering Library. This secluded haven is adorned with shelves upon shelves of ancient tomes and scrolls, their pages filled with the accumulated wisdom of
+    <a href="../../lore/history/the_children_of_the_sun.html">
+     the children of the sun
+    </a>
+    . While the illusory spirits wander the city, they hold within them fragments of memories and forgotten lore. By engaging with these ethereal apparitions in the Whispering Library, adventurers can glean valuable insights, whispers of clues that may point them towards the hidden paths and mechanisms that unlock the entrance to
     <a href="../landmarks/Tol'Medith.html">
      Tol'Medith
     </a>
