--- a/campaign/locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html
@@ -190,5 +190,29 @@
     Supporting the overall operations of Havenholme, administrative staff members handle various administrative tasks, including record-keeping, scheduling, and logistics. They facilitate communication between different departments, manage personnel files, and ensure the smooth functioning of administrative processes.
    </p>
   </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Prison Gangs
+   </h3>
+   <p>
+    <ul>
+     <li>
+      The Chainbreakers: A defiant gang of prisoners plotting escape, clashing with
+      <a href="../../../../../lore/factions/the_sallow_hands.html">
+       the sallow hands
+      </a>
+      over their rebellious schemes.
+     </li>
+     <li>
+      The Sallow Hands: A cunning gang thriving as informants for the guards, despised by
+      <a href="../../../../../lore/factions/the_chainbreakers.html">
+       the chainbreakers
+      </a>
+      for betraying their breakout attempt.
+     </li>
+    </ul>
+   </p>
+  </div>
  </body>
 </html>
