--- a/campaign/lore/factions/index.html
+++ b/campaign/lore/factions/index.html
@@ -66,6 +66,26 @@
      </a>
     </li>
     <li>
+     <a href="the_ashcloak_syndicate.html">
+      the ashcloak syndicate
+     </a>
+    </li>
+    <li>
+     <a href="the_chainbreakers.html">
+      the chainbreakers
+     </a>
+    </li>
+    <li>
+     <a href="the_sallow_hands.html">
+      the sallow hands
+     </a>
+    </li>
+    <li>
+     <a href="the_tidewraith_crew.html">
+      the tidewraith crew
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/ironblood_vanguard_crest.jpg">
       <i class="fas fa-camera">
       </i>
