--- a/campaign/quests/havenholme_prison_break/havenholme_prison_break.html
+++ b/campaign/quests/havenholme_prison_break/havenholme_prison_break.html
@@ -48,19 +48,13 @@
   </div>
   <div class="dnd-header">
    <h1>
-    <a href="../../locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html">
-     Havenholme
-    </a>
-    prison break
+    havenholme prison break
    </h1>
   </div>
   <hr/>
   <div class="dnd-info">
    <h3>
-    <a href="../../locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html">
-     Havenholme
-    </a>
-    Prison Break
+    Havenholme Prison Break
    </h3>
    <p class="first-paragraph">
     This is a quest which involves freeing a prisoner (Dentin Rues) from
@@ -90,16 +84,51 @@
     Quest Letter
    </h3>
    <p class="first-paragraph">
-    TODO
+    Orbitees,
+   </p>
+   <p>
+    We extend our sincerest congratulations on the successful retrieval of
+    <a href="../../items/books/The_Book_Of_Artii.html">
+     The Book Of Artii
+    </a>
+    . The customer is highly satisfied with your work, and we commend you for your dedication and precision in completing the mission. However, there remains a complication.
+   </p>
+   <p>
+    The information contained within the book is coded, and the only known individual capable of deciphering it is currently imprisoned on
+    <a href="../../locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html">
+     Havenholme</a>, the notorious prison colony. Your new mission is to infiltrate
+    <a href="../../locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html">
+     Havenholme
+    </a>
+    by posing as prisoners. Once inside, you must locate our operative, known as The Owl. The Owl will guide you in finding a prisoner named Dentin Rues, who is the key to the book's decoding.
+   </p>
+   <p>
+    After locating Dentin Rues, your objective will shift to orchestrating an escape from the prison. The Owl has been embedded in
+    <a href="../../locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html">
+     Havenholme
+    </a>
+    for some time and will assist in your escape plan. Exercise extreme caution, as
+    <a href="../../locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html">
+     Havenholme
+    </a>
+    is highly secure, and any misstep could jeopardize the mission. Maintain your cover at all costs, and avoid unnecessary attention.
+   </p>
+   <p>
+    Commander Ervin is aboard the ship with you and will provide you with further details of the mission. He will brief you on the specifics of your cover identities and entry strategy for
+    <a href="../../locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html">
+     Havenholme</a>, as well as key intelligence regarding the prison's layout and security protocols.
+   </p>
+   <p>
+    We trust your skills will again prove invaluable. Good luck, and ensure Dentin Rues is brought back safely.
+   </p>
+   <p>
+    ~The Commissioner
    </p>
   </div>
   <hr/>
   <div class="dnd-info">
    <h3>
-    <a href="../../locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html">
-     Havenholme
-    </a>
-    Details
+    Havenholme Details
    </h3>
    <p class="first-paragraph">
     The players will not be allowed to take their items into
