--- a/campaign/quests/index.html
+++ b/campaign/quests/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="mad_wolf_disease.html">
+      mad wolf disease
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="havenholme_prison_break/index.html">
       <i class="fas fa-folder">
       </i>
