--- a/campaign/quests/retrieving_the_book_of_artii/Retrieving_The_Book_Of_Artii.html
+++ b/campaign/quests/retrieving_the_book_of_artii/Retrieving_The_Book_Of_Artii.html
@@ -48,7 +48,7 @@
   </div>
   <div class="dnd-header">
    <h1>
-    Retreiving
+    Retrieving
     <a href="../../items/books/The_Book_Of_Artii.html">
      The Book Of Artii
     </a>
@@ -57,7 +57,7 @@
   <hr/>
   <div class="dnd-info">
    <h3>
-    Retreiving
+    Retrieving
     <a href="../../items/books/The_Book_Of_Artii.html">
      The Book Of Artii
     </a>
@@ -98,6 +98,45 @@
      The Book Of Artii
     </a>
     .
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    By-Letter Quest Start
+   </h3>
+   <p class="first-paragraph">
+    One option for how the quest can begin is via a letter. The players recieved an urgent request to mee at the docks of the town they are in, with little other information but to bring their usual equipment. At the docks, the players receive a letter outlining their mission.
+   </p>
+   <p>
+    "This letter serves as your official assignment regarding the urgent retrieval of
+    <a href="../../items/books/The_Book_Of_Artii.html">
+     The Book Of Artii
+    </a>
+    . Your primary objective is to locate and retrieve this book at the request of a customer.
+   </p>
+   <p>
+    The wizard
+    <a href="../../characters/non-player/milton_manastorm.html">
+     milton manastorm
+    </a>
+    was tasked with obtaining the book and was last known to be in
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea</a>, where he had located its whereabouts. At that time, he was staying at the Salty SeaHorse Inn. Milton was scheduled to return with the book yesterday, but he has not reported back. His last communication was received two days ago, and he has since failed to provide his regular daily updates via hawkmail. Given Milton's chaotic nature, his failure to report is still a significant concern.
+   </p>
+   <p>
+    You are instructed to travel to the city of
+    <a href="../../locations/cities/Vifavea/Vifavea.html">
+     Vifavea
+    </a>
+    immediately. Once there, locate the Salty SeaHorse Inn where Milton was last known to be staying. Investigate the circumstances surrounding his disappearance and ascertain the current status of
+    <a href="../../items/books/The_Book_Of_Artii.html">
+     The Book Of Artii
+    </a>
+    . If possible, retrieve the book and report back with your findings. Please note that Milton’s usual communication method is via hawkmail, and his silence is unusual, warranting immediate action. Be prepared for potential complications or hazards, as the circumstances of Milton’s absence are unknown. Do not assume that Milton is still an ally - as we are unaware of his status.
+   </p>
+   <p>
+    We trust in your capability to handle this mission with the urgency and professionalism required. Your prompt action is essential to ensure the success of this critical task. Do not raise any uneccesary attention and Good luck.
    </p>
   </div>
  </body>
