--- a/campaign/creatures/critters/index.html
+++ b/campaign/creatures/critters/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="bristlecone_hopper.html">
+      bristlecone hopper
+     </a>
+    </li>
+    <li>
      <a href="feathered_fluttercrab.html">
       feathered fluttercrab
      </a>
