--- a/campaign/lore/guilds/Emberkawa_Syndicate.html
+++ b/campaign/lore/guilds/Emberkawa_Syndicate.html
@@ -219,22 +219,13 @@
    <p>
     <ul>
      <li>
-      <a href="../../characters/non-player/Ravik_Blacktor.html">
-       Ravik Blacktor
-      </a>
-      (Boss)
+      Ravik Blacktor (Boss)
      </li>
      <li>
-      <a href="../../characters/non-player/Trivok_Blacktor.html">
-       Trivok Blacktor
-      </a>
-      (Lieutenant)
+      Trivok Blacktor (Lieutenant)
      </li>
      <li>
-      <a href="../../characters/non-player/Marek_Blacktor.html">
-       Marek Blacktor
-      </a>
-      (Lieutenant)
+      Marek Blacktor (Lieutenant)
      </li>
     </ul>
    </p>
